# zeroone

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake.yml
examples/: 1.cpp  2.cpp  3.cpp
src/: expression.hpp  instrument.hpp  notes.hpp  taskpool.hpp  zoengine.cpp  zoengine.h
wide/: CMakeLists.txt  expression.cpp  expression.h  expression.hpp  expresstime.cpp  expresstime.h  generator.cpp  generator.h  generator.hpp  instrument.cpp  instrument.h  instrument.hpp  lc.cpp  main.cpp  notes.hpp  sequencer.cpp  sequencer.h  taskpool.hpp  texpression.cpp  texpression.h  wide.cpp
wide.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
wide.xcodeproj/xcuserdata/paulo.xcuserdatad/xcschemes/: wide.xcscheme  xcschememanagement.plist
wide/include/: wideAPI.h
wide/src/: engine.cpp  instrument.cpp  instrument.h  instrument.hpp  taskpool.hpp  wide.cpp  wide.h
zero_one/: CMakeLists.txt
zero_one/include/: zeroone.h
zero_one/src/: engine.h  zoengine.h
zeroone/: CMakeLists.txt
zeroone/include/: zeroone.h
zeroone/src/: zoengine.cpp  zoengine.h
